--- a/settingsdlg.ui
+++ b/settingsdlg.ui
@@ -17,7 +17,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="widget">
       <attribute name="title">
@@ -280,7 +280,7 @@ p, li { white-space: pre-wrap; }
           <item>
            <widget class="QRadioButton" name="radioAtlas">
             <property name="text">
-             <string>&amp;Local ATLAS by TCP</string>
+             <string>&amp;ATLAS by TCP</string>
             </property>
            </widget>
           </item>
@@ -288,155 +288,165 @@ p, li { white-space: pre-wrap; }
         </widget>
        </item>
        <item>
-        <layout class="QVBoxLayout" name="verticalLayout_7">
-         <item>
-          <spacer name="verticalSpacer">
-           <property name="orientation">
-            <enum>Qt::Vertical</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>20</width>
-             <height>40</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item>
-          <layout class="QFormLayout" name="formLayout">
-           <item row="0" column="0">
-            <widget class="QLabel" name="label_10">
-             <property name="text">
-              <string>ATLAS &amp;host</string>
-             </property>
-             <property name="buddy">
-              <cstring>atlHost</cstring>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="1">
-            <widget class="QComboBox" name="atlHost">
-             <property name="editable">
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="0">
-            <widget class="QLabel" name="label_11">
-             <property name="text">
-              <string>ATLAS port</string>
-             </property>
-             <property name="buddy">
-              <cstring>atlPort</cstring>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="1">
-            <widget class="QSpinBox" name="atlPort">
-             <property name="maximum">
-              <number>65535</number>
-             </property>
-             <property name="value">
-              <number>18000</number>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="0">
-            <widget class="QLabel" name="label_18">
-             <property name="text">
-              <string>TCP &amp;retry count</string>
-             </property>
-             <property name="buddy">
-              <cstring>atlRetryCnt</cstring>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="1">
-            <widget class="QSpinBox" name="atlRetryCnt">
-             <property name="minimum">
-              <number>1</number>
-             </property>
-            </widget>
-           </item>
-           <item row="3" column="0">
-            <widget class="QLabel" name="label_19">
-             <property name="text">
-              <string>TCP retry &amp;delay</string>
-             </property>
-             <property name="buddy">
-              <cstring>atlRetryTimeout</cstring>
-             </property>
-            </widget>
-           </item>
-           <item row="3" column="1">
-            <widget class="QSpinBox" name="atlRetryTimeout"/>
-           </item>
-          </layout>
-         </item>
-         <item>
-          <spacer name="verticalSpacer_7">
-           <property name="orientation">
-            <enum>Qt::Vertical</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>20</width>
-             <height>18</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item>
-          <widget class="QCheckBox" name="checkEmptyRestore">
-           <property name="text">
-            <string>When ATLAS returns spaces or empty - replace with original text</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <spacer name="verticalSpacer_13">
-           <property name="orientation">
-            <enum>Qt::Vertical</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>20</width>
-             <height>40</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_9">
+        <widget class="QTabWidget" name="tabWidget_2">
+         <property name="currentIndex">
+          <number>0</number>
+         </property>
+         <widget class="QWidget" name="tab_9">
+          <attribute name="title">
+           <string>ATLAS</string>
+          </attribute>
+          <layout class="QVBoxLayout" name="verticalLayout_7">
            <item>
-            <widget class="QLabel" name="label_17">
-             <property name="text">
-              <string>Global translator hot&amp;key</string>
+            <spacer name="verticalSpacer">
+             <property name="orientation">
+              <enum>Qt::Vertical</enum>
              </property>
-             <property name="buddy">
-              <cstring>gctxHotkey</cstring>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>20</width>
+               <height>40</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+           <item>
+            <layout class="QFormLayout" name="formLayout">
+             <item row="0" column="0">
+              <widget class="QLabel" name="label_10">
+               <property name="text">
+                <string>ATLAS &amp;host</string>
+               </property>
+               <property name="buddy">
+                <cstring>atlHost</cstring>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="1">
+              <widget class="QComboBox" name="atlHost">
+               <property name="editable">
+                <bool>true</bool>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="0">
+              <widget class="QLabel" name="label_11">
+               <property name="text">
+                <string>&amp;ATLAS port</string>
+               </property>
+               <property name="buddy">
+                <cstring>atlPort</cstring>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="1">
+              <widget class="QSpinBox" name="atlPort">
+               <property name="maximum">
+                <number>65535</number>
+               </property>
+               <property name="value">
+                <number>18000</number>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="0">
+              <widget class="QLabel" name="label_18">
+               <property name="text">
+                <string>TCP &amp;retry count</string>
+               </property>
+               <property name="buddy">
+                <cstring>atlRetryCnt</cstring>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="1">
+              <widget class="QSpinBox" name="atlRetryCnt">
+               <property name="minimum">
+                <number>1</number>
+               </property>
+              </widget>
+             </item>
+             <item row="3" column="0">
+              <widget class="QLabel" name="label_19">
+               <property name="text">
+                <string>TCP retry &amp;delay</string>
+               </property>
+               <property name="buddy">
+                <cstring>atlRetryTimeout</cstring>
+               </property>
+              </widget>
+             </item>
+             <item row="3" column="1">
+              <widget class="QSpinBox" name="atlRetryTimeout"/>
+             </item>
+            </layout>
+           </item>
+           <item>
+            <spacer name="verticalSpacer_7">
+             <property name="orientation">
+              <enum>Qt::Vertical</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>20</width>
+               <height>0</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+           <item>
+            <widget class="QCheckBox" name="checkEmptyRestore">
+             <property name="text">
+              <string>When ATLAS returns spaces or empty - replace with original text</string>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QHotkeyEdit" name="gctxHotkey"/>
+            <spacer name="verticalSpacer_13">
+             <property name="orientation">
+              <enum>Qt::Vertical</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>20</width>
+               <height>40</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+           <item>
+            <layout class="QHBoxLayout" name="horizontalLayout_9">
+             <item>
+              <widget class="QLabel" name="label_17">
+               <property name="text">
+                <string>Glo&amp;bal translator hotkey</string>
+               </property>
+               <property name="buddy">
+                <cstring>gctxHotkey</cstring>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QHotkeyEdit" name="gctxHotkey"/>
+             </item>
+            </layout>
+           </item>
+           <item>
+            <spacer name="verticalSpacer_11">
+             <property name="orientation">
+              <enum>Qt::Vertical</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>20</width>
+               <height>40</height>
+              </size>
+             </property>
+            </spacer>
            </item>
           </layout>
-         </item>
-         <item>
-          <spacer name="verticalSpacer_11">
-           <property name="orientation">
-            <enum>Qt::Vertical</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>20</width>
-             <height>40</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-        </layout>
+         </widget>
+        </widget>
        </item>
       </layout>
      </widget>
@@ -1017,7 +1027,7 @@ p, li { white-space: pre-wrap; }
               <item row="0" column="0">
                <widget class="QLabel" name="label_20">
                 <property name="text">
-                 <string>Proxy address</string>
+                 <string>P&amp;roxy address</string>
                 </property>
                 <property name="buddy">
                  <cstring>editProxyHost</cstring>
@@ -1044,7 +1054,7 @@ p, li { white-space: pre-wrap; }
               <item row="1" column="0">
                <widget class="QLabel" name="label_23">
                 <property name="text">
-                 <string>Proxy type</string>
+                 <string>Pro&amp;xy type</string>
                 </property>
                 <property name="buddy">
                  <cstring>listProxyType</cstring>
@@ -1083,7 +1093,7 @@ p, li { white-space: pre-wrap; }
               <item row="0" column="0">
                <widget class="QLabel" name="label_21">
                 <property name="text">
-                 <string>Login</string>
+                 <string>&amp;Login</string>
                 </property>
                 <property name="buddy">
                  <cstring>editProxyLogin</cstring>
@@ -1096,7 +1106,7 @@ p, li { white-space: pre-wrap; }
               <item row="1" column="0">
                <widget class="QLabel" name="label_22">
                 <property name="text">
-                 <string>Password</string>
+                 <string>Pass&amp;word</string>
                 </property>
                 <property name="buddy">
                  <cstring>editProxyPassword</cstring>
@@ -1223,6 +1233,7 @@ p, li { white-space: pre-wrap; }
   <tabstop>radioNifty</tabstop>
   <tabstop>radioGoogle</tabstop>
   <tabstop>radioAtlas</tabstop>
+  <tabstop>tabWidget_2</tabstop>
   <tabstop>atlHost</tabstop>
   <tabstop>atlPort</tabstop>
   <tabstop>atlRetryCnt</tabstop>
